Fix UninstallAppController

The callback was cleared for each focus changed event even if it wasn't
for the right element. This meant that SetValue() was never called since
the first focus changed event we received was never the right one.

Fix it by swapping the callback after the right element is found.

Tbr: grt@chromium.org
Bug: 844185
Change-Id: I7dabce15513c0346e6c78adf1802a562002de08a
Reviewed-on: https://chromium-review.googlesource.com/1064543
Reviewed-by: Patrick Monette <pmonette@chromium.org>
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559684}
Former-commit-id: bc84dc82d13115138000a6b4b578e9fca655556a